Fix centering on mobile, fix double events on touchscreen, layout improvements for controls

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,4 +17,5 @@ root:host {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  width: 100%
 }
